IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
6/27/14: Added option to Alterheader to set space group and made Tilt set it
to 1 for tomogram output, following new MRC conventions (In 4.7).

6/22/14: IMOD_4-7-6
6/22/14: Allow robust alignment in Batchruntomo with patch tracking and
contours cut into pieces (In 4.7).

6/18/14: In eTomo - Tomogram Combination, fixed problems with validation and
handling missing tomograms (In 4.7).(Bug# 1803)

6/17/14: In eTomo using the piece list file (when available) to open montaged
raw stacks in Reconstruction and Serial Sections (In 4.7).(Bug# 1801)

6/5/14: Fixed Tomopitch so its output is parsable by eTomo for shift or
thickness more than 1000 (In 4.7).

6/3/14: Made 3dmod automatically look for piece coordinates in an associated
.mdoc file and eliminated -pm option, which was not in the man page (In 4.7).

5/21/14: Stopped Makecomfile from giving error when run with a bead size of 0
(In 4.7).

5/14/14: Fixed transparent background when saving model montage (In 4.7). 

5/4/14: IMOD_4-7-5
5/4/14: In eTomo fixed the icon for warning message popups (In 4.7).
(Bug# 1797)

5/1/14: Fixed ability to run certain steps on single axis datasets in a
Windows installation without Cygwin (In 4.7).

5/1/14: Fixed setting of IMOD_CALIB_DIR in by installer for Windows without
Cygwin (In 4.7).

4/30/14: Fixed Tiltxcorr when using shift limits (In 4.7).

4/27/14: Changed Squeezevol to allow odd output sizes in X and Z (In 4.7).

4/16/14: Fixed loss of bottom and top lines in interpolation routine when
there is 0 or 180 degree rotation (In 4.7).

4/16/14: Fixed clip flipxy when writing signed bytes (In 4.7).

4/15/14: IMOD_4-7-4
4/15/14: In eTomo - Tomogram Generation fixing an initialization error in
logarithm density scaling.  Also handled the logarithm offset from
copytomocoms (In 4.7).(Bug# 1796)

4/14/14: Made Copytomocoms set the linear scaling properly in tilt.com when the cryo